<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:orientation="vertical">

    <!--GROUP OF VIEWS FOR PRODUCT ( IN EDIT MODE ) -->

    <!--GROUP OF VIEWS FOR NAME -->

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        android:paddingRight="18dp"
        android:text="@string/edit_product"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:paddingRight="18dp"
            android:text="@string/product_name"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/product_field_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textSize="16sp" />

    </LinearLayout>

    <!--GROUP OF VIEWS FOR PRICE -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:paddingRight="18dp"
            android:text="@string/product_price"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/product_field_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textSize="16sp" />

    </LinearLayout>

    <!--GROUP OF VIEWS FOR QUANTITY (STOCK ) -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:paddingRight="18dp"
            android:text="@string/product_quantity"
            android:textAllCaps="true"
            android:textSize="16sp" />


        <Button
            android:id="@+id/button_increment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:text="+" />

        <EditText
            android:id="@+id/quantity_counter"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:gravity="center_horizontal"
            android:text="0" />

        <Button
            android:id="@+id/button_decrement"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textSize="20dp"
            android:text="-" />

    </LinearLayout>

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:scaleType="fitCenter"
        android:src="@drawable/add_image" />

</LinearLayout>