<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--GROUP OF VIEWS FOR PRODUCT -->

    <TextView
        android:id="@+id/product_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        android:paddingRight="18dp"
        android:text="@string/product_profile"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:paddingRight="18dp"
            android:text="@string/product_name"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textSize="16sp" />

    </LinearLayout>

    <!--GROUP OF VIEWS FOR PRICE -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:paddingRight="45dp"
            android:text="@string/product_price"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textSize="16sp" />

    </LinearLayout>

    <!--GROUP OF VIEWS FOR QUANTITY -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:paddingRight="18dp"
            android:text="@string/stock_title"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_stock_increment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/light_blue"
            android:text="+"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/stock_amount"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:text="0"
            android:textSize="23sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_stock_decrement"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/light_blue"
            android:text="-"
            android:textSize="29sp" />

    </LinearLayout>


    <!--GROUP OF VIEWS FOR CURRENT STOCK -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/light_blue"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:paddingRight="10dp"
            android:text="@string/product_quantity"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_field_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_order_increment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/light_blue"
            android:text="+"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/quantity_counter"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:text="0"
            android:textSize="23sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_order_decrement"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/light_blue"
            android:text="-"
            android:textSize="29sp" />

        <TextView
            android:id="@+id/order_to_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:paddingLeft="8dp"
            android:text="@string/order_to_supplier" />

        <ImageView
            android:id="@+id/button_order_to_supplier"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_email_black_24dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/add_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="40dp"
        android:scaleType="fitCenter"
        android:src="@drawable/add_image" />

</LinearLayout>